--- a/css-basic/index.css
+++ b/css-basic/index.css
@@ -1,25 +1,75 @@
 p,
-li,
-h1 {
-  color: red;
+li {
+  color: #607d8b;
+}
+
+.title {
+  margin: auto;
+  border-bottom: 6px solid #2196f3;
+  font-size: 36px;
+  padding: 10px;
+}
+
+.header {
+  background-color: #2196f3;
+  color: #fff;
 }
 
 p {
   width: 500px;
-  border: 1px solid black;
   padding: 10px 5px 10px 10px;
+  /*border: 1px solid black;*/
+  border-left: 10px solid #3f51b5;
+  background-color: lightgray;
+}
+
+.conteudo {
+  background-color: #2196f3;
+  height: 600px;
+}
+
+.branco {
+  height: 600px;
 }
 
 #my-id {
-  color: cornflowerblue;
+  /*color: #ffff;*/
   font-style: italic;
 }
 
-.a-link {
+/* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
   color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
 }
 
 img[src] {
   width: 300px;
-  height: 250px;
+  height: 210px;
+  margin-left: 43%;
+}
+
+.box {
+  background-color: lightgrey;
+  width: 300px;
+  border: 15px solid #3f51b5;
+  padding: 50px;
+  margin: 20px;
+  color: #607d8b;
+  margin-top: -100px;
+  margin-left: 40%;
 }
